overflowing svg centering issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -511,3 +511,18 @@ svg {
 .button:active {
 	opacity: 0.5;
 }
+
+@media (max-width: 1024px) {
+	svg {
+		margin: 0;
+	}
+}
+
+@media (max-width: 900px) {
+	svg {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+}
